# multi-agent-system

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-install.sh  .secrets.baseline  PRE_COMMIT_SETUP.md  README.md  TESTING.md  docker-compose.yml  multi_agent_system_full_spec.md
.claude/: instructions.md
agent-service/: DEVELOPMENT.md  Dockerfile  LOGGING.md  pyproject.toml
agent-service/src/: database.py  main.py
agent-service/src/api/: ai_todos.py  server.py  streaming.py  todos.py
agent-service/src/graph/: workflow.py
agent-service/src/models/: api_models.py  db_models.py  state.py
agent-service/src/nodes/: agent_tools.py  finalizer.py  research_agent.py  sub_agent_tools.py  supervisor.py  transform_agent.py  ui_tools.py
agent-service/src/services/: ai_todo_service.py  todo_service.py
agent-service/src/utils/: logging_config.py
agent-service/tests/: README.md  conftest.py  test_agents.py  test_api.py  test_integration.py  test_logging.py  test_routing.py  test_streaming.py  test_todo_api.py  test_todo_lifecycle.py  test_todo_service.py  test_ui_tools.py
frontend-ui/: .eslintrc.json  .gitignore  jest.config.js  package-lock.json  package.json
frontend-ui/__tests__/: README.md
frontend-ui/__tests__/components/: ApprovalCard.test.tsx  DocumentViewer.test.tsx  EditableValue.test.tsx  OptionsSelector.test.tsx  ResearchSummary.test.tsx  TaskChatView.test.tsx  TodoManager.test.tsx
frontend-ui/app/: globals.css  layout.tsx  page.tsx
frontend-ui/app/api/agent/: route.ts
frontend-ui/app/api/stream/: route.ts
frontend-ui/app/api/todos/: route.ts
frontend-ui/app/api/todos/[id]/: route.ts
frontend-ui/app/components/: ApprovalCard.tsx  DocumentViewer.tsx  EditableValue.tsx  OptionsSelector.tsx  ResearchSummary.tsx  TaskChatView.tsx  TodoManager.tsx  index.ts
